less/stb-layout.less
/*General margins and paddings in layout with exceptions*/
.container{
  padding-top: 48px;
}
.row{
  .ColumnMarginBottom(48px);
}

.container.article{
  .row{
    .ColumnMarginBottom(24px);
  }
}

.banner{

  h2,h1{
    margin: 0 12px 0 0;
  }

  @media (max-width: @screen-md-max) {
    p.intro{
       margin: 0 0 6px;
    }
  }
  .row{
    .ColumnMarginBottom(0);
  }
}

@media (max-width: @screen-sm-max) {
  .container{
    padding-top: 24px;
  }
  .row{
    .ColumnMarginBottom(24px);
  }

  .banner{
    .row{
      .ColumnMarginBottom(0);
    }
  }
}

footer{
  .container{
    padding-top: 0;
  }
  .row{
    padding-bottom: 0;
  }
}

/*End of general margins and paddings in layout*/

// Class for stuff that should be hidden initially
.initial-hide {
  display: none; 
} 
  
// Gives no gap between rows - needs to be modified
// (Deprecated, there's by default no gap between rows, instead add margin/padding using top-margin-xx/bottom-padding-xx classes.
.nogap{
  margin-bottom:0px;
}

// Styling for toc lists on article pages
//@media screen and (max-width: 991px) {
//  .toc-list .items {
//    display: none;
//  }
//}

// Fix for TinyMCE formatting 
img.editor-image-right {
  .pull-right();
   margin-left: 24px;
}

img.editor-image-left {
  .pull-left();
  margin-right: 24px;
} 


// End of TinyMCE fixes
    
.toc-list ul.items > li {
  list-style-type: none;
}

.toc-list ul.items > li:not(:first-child) {
  margin-top: 10px; 
}

// End of styling for toc lists on article pages 


// Adds visual border at top and bottom of element
.border-top-and-bottom {
  border-top: 1px solid;
  border-bottom: 1px solid;
  border-color: @stb-gray-third;
}

// Various top and bottom gaps for all screen widths

.top-margin-50 {
  margin-top: 48px;
}

.top-padding-50 {
  padding-top: 48px;
}

.top-margin-40 {
  margin-top: 36px;
}

.top-padding-40 {
  padding-top: 36px;
}

.top-margin-30 {
  margin-top: 30px;
}

.top-padding-30 {
  padding-top: 30px;
}

.top-margin-20 {
  margin-top: 24px;
}

.top-padding-20 {
  padding-top: 24px;
}

.top-margin-10 {
  margin-top: 12px;
}

.top-padding-10 {
  padding-top: 12px;
}

.top-margin-5 {
  margin-top: 6px;
}

.top-padding-5 {
  padding-top: 6px;
}

.bottom-margin-50 {
  margin-bottom: 48px;
}

.bottom-padding-50 {
  padding-bottom: 48px;
}

.bottom-margin-40 {
  margin-bottom: 36px;
}

.bottom-padding-40 {
  padding-bottom: 36px;
}

.bottom-margin-30 {
  margin-bottom: 30px;
}

.bottom-padding-30 {
  padding-bottom: 30px;
}

.bottom-margin-20 {
  margin-bottom: 24px;
}

.bottom-padding-20 {
  padding-bottom: 24px;
}

.bottom-margin-10 {
  margin-bottom: 12px;
}

.bottom-padding-10 {
  padding-bottom: 12px;
}

.bottom-margin-5 {
  margin-bottom: 6px;
}

.bottom-padding-5 {
  padding-bottom: 6px;
}

/* New classes for right/left padding and margins */

.right-padding-20 {
  padding-right: 20px;
}

.right-padding-40 {
  padding-right: 40px;
}

.right-padding-60 {
  padding-right: 60px;
}

.left-padding-20 {
  padding-left: 20px;
}

.left-padding-40 {
  padding-left: 40px;
}

.left-padding-60 {
  padding-left: 60px;
}
// Various top and bottom gaps for full width only

.top-margin-50-mdlg {
  margin-top: 48px;
}

.top-padding-50-mdlg {
  padding-top: 48px;
}

.top-margin-40-mdlg {
  margin-top: 36px;
}

.top-padding-40-mdlg {
  padding-top: 36px;
}

.top-margin-30-mdlg {
  margin-top: 30px;
}

.top-padding-30-mdlg {
  padding-top: 30px;
}

.top-margin-20-mdlg {
  margin-top: 24px;
}

.top-padding-20-mdlg {
  padding-top: 24px;
}

.top-margin-10-mdlg {
  margin-top: 12px;
}

.top-padding-10-mdlg {
  padding-top: 12px;
}

.bottom-margin-50-mdlg {
  margin-bottom: 48px;
}

.bottom-padding-50-mdlg {
  padding-bottom: 48px;
}

.bottom-margin-40-mdlg {
  margin-bottom: 36px;
}

.bottom-padding-40-mdlg {
  padding-bottom: 36px;
}

.bottom-margin-30-mdlg {
  margin-bottom: 30px;
}

.bottom-padding-30-mdlg {
  padding-bottom: 30px;
}

.bottom-margin-20-mdlg {
  margin-bottom: 24px;
}

.bottom-padding-20-mdlg {
  padding-bottom: 24px;
}

.bottom-margin-10-mdlg {
  margin-bottom: 12px;
}

.bottom-padding-10-mdlg {
  padding-bottom: 12px;
}


@media(max-width:@screen-md-min) {
  
.top-margin-50-mdlg {
  margin-top: 0px;
}

.top-padding-50-mdlg {
  padding-top: 0px;
}

.top-margin-40-mdlg {
  margin-top: 0px;
}

.top-padding-40-mdlg {
  padding-top: 0px;
}

.top-margin-30-mdlg {
  margin-top: 0px;
}

.top-padding-30-mdlg {
  padding-top: 0px;
}

.top-margin-20-mdlg {
  margin-top: 0px;
}

.top-padding-20-mdlg {
  padding-top: 0px;
}

.top-margin-10-mdlg {
  margin-top: 0px;
}

.top-padding-10-mdlg {
  padding-top: 0px;
}

.bottom-margin-50-mdlg {
  margin-bottom: 0px;
}

.bottom-padding-50-mdlg {
  padding-bottom: 0px;
}

.bottom-margin-40-mdlg {
  margin-bottom: 0px;
}

.bottom-padding-40-mdlg {
  padding-bottom: 0px;
}

.bottom-margin-30-mdlg {
  margin-bottom: 0px;
}

.bottom-padding-30-mdlg {
  padding-bottom: 0px;
}

.bottom-margin-20-mdlg {
  margin-bottom: 0px;
}

.bottom-padding-20-mdlg {
  padding-bottom: 0px;
}

.bottom-margin-10-mdlg {
  margin-bottom: 0px;
}

.bottom-padding-10-mdlg {
  padding-bottom: 0px;
}
  
}

// End of classes for spacing 

// Various width settings for all screen widths, to be used in any element, including dimensioning of table columns.
.width-75 {
  width: 75%;
}

.width-60 {
  width: 60%; 
}

.width-50 {
  width: 50%;
}

.width-40 {
  width: 40%;
}

.width-30 {
  width: 30%;
}

.width-20 {
  width: 20%;
}

.width-10 {
  width: 10%;
}

.width-5 {
  width: 5%;
}

// Various side margins/paddings 
.left-margin-5 {
  margin-left: 6px;
}

.left-margin-10 {
  margin-left: 12px;
}

.left-margin-20 {
  margin-left: 24px;
}

.right-margin-5 {
  margin-right: 6px;
}

.right-margin-10 {
  margin-right: 12px;
}

.right-margin-20 {
  margin-right: 24px;
}

.left-padding-5 {
  padding-left: 6px;
}

.left-padding-10 {
  padding-left: 12px;
}

.left-padding-20 {
  padding-left: 24px;
}

.right-padding-5 {
  padding-right: 6px;
}

.right-padding-10 {
  padding-right: 12px;
}

.right-padding-20 {
  padding-right: 24px;
}

@media(max-width:@screen-md-min) {
  .left-padding-5-mdlg {
    padding-left: 0px;
  }

  .left-padding-10-mdlg {
    padding-left: 0px;
  }

  .left-padding-20-mdlg {
    padding-left: 0px;
  }

  .right-padding-5-mdlg {
    padding-right: 0px;
  }

  .right-padding-10-mdlg {
    padding-right: 0px;
  }

  .right-padding-20-mdlg {
    padding-right: 0px;
  }
}

// End of various side margins/paddings

// Various width settings for full width only

.width-75-mdlg {
  width: 75%;
}

.width-60-mdlg {
  width: 60%;
}

.width-50-mdlg {
  width: 50%;
}

.width-40-mdlg {
  width: 40%;
}

.width-30-mdlg {
  width: 30%;
}

.width-20-mdlg {
  width: 20%;
}

.width-10-mdlg {
  width: 10%;
}

.width-5-mdlg {
  width: 5%;
}


@media(max-width:@screen-md-min) {
  .width-75-mdlg {
    width: 100%;
  }

  .width-60-mdlg {
    width: 100%;
  }
  
  .width-50-mdlg {
    width: 100%;
  }
  
  .width-40-mdlg {
    width: 100%;
  }

  .width-30-mdlg {
    width: 100%;
  }

  .width-20-mdlg {
    width: 100%;
  }
  
  .width-10-mdlg {
    width: 100%;
  }
  
  .width-5-mdlg {
    width: 100%;
  }
  
}
// End of various width settings for full width only

